<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/to_do_wall"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_timer_for_the_task"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="377dp"
        android:layout_height="152dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <!-- Days Layout -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/dayInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/day"
                android:inputType="number"
                android:textColor="#FFFFFF"
                android:textColorHint="#C7C2C2"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/days"
                android:textColor="#FFFFFF"
                android:textColorHint="#DB1C1C"
                android:textSize="14sp" />
        </LinearLayout>

        <!-- Hours Layout -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/hourInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hour"
                android:inputType="number"
                android:textColor="#FFFFFF"
                android:textColorHint="#C7C2C2"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="HOURS"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />
        </LinearLayout>

        <!-- Minit Layout -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/minuteInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/minute"
                android:inputType="number"
                android:textColor="#FFFFFF"
                android:textColorHint="#C7C2C2"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minit"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />
        </LinearLayout>

        <!-- Second Layout -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/secondInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/second"
                android:inputType="number"
                android:textColor="#FFFFFF"
                android:textColorHint="#C7C2C2"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SECOND "
                android:textColor="#FFFFFF"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/startTimerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:backgroundTint="#636869"
        android:layout_marginTop="20dp" />
</LinearLayout>
